--- a/Spotify Organize/index.html
+++ b/Spotify Organize/index.html
@@ -1,67 +1,49 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="SpotifyOrganizer">
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Spotify Organizer</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- CSS Library Stack -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.gridster/0.5.6/jquery.gridster.min.css">
+  <title>Spotify Organizer</title>
 
-<!-- Main CSS Stack -->
-<link rel="stylesheet" href="main.css">
+  <!-- CSS Library Stack -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.gridster/0.5.6/jquery.gridster.min.css">
 
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!-- Main CSS Stack -->
+  <link rel="stylesheet" href="main.css">
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-</head>
-<body>
+  </head>
+  <body ng-controller="OrganizeController">
+
+    <div class="media-cover blurred"></div>
 
     <div class="container">
 
-      <div class="gridster" ng-controller="organizeController">
-        <ul class="media-list">
-          <li class="media" data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-            <div class="media-left">
-              <a href="#"><img class="media-object" src="" alt="playlist" /></a>
-            </div>
-            <div class="media-body">
-              <h4 class="media-heading">Media heading</h4>
-            </div>
-          </li>
-          <li class="media" data-row="1" data-col="2" data-sizex="1" data-sizey="1">
-            <div class="media-left">
-              <a href="#"><img class="media-object" src="" alt="playlist" /></a>
-            </div>
-            <div class="media-body">
-              <h4 class="media-heading">Media heading</h4>
-            </div>
-          </li>
-          <li class="media" data-row="1" data-col="3" data-sizex="1" data-sizey="1">
-            <div class="media-left">
-              <a href="#"><img class="media-object" src="" alt="playlist" /></a>
-            </div>
-            <div class="media-body">
-              <h4 class="media-heading">Media heading</h4>
-            </div>
-          </li>
-          <li class="media" data-row="2" data-col="1" data-sizex="1" data-sizey="1">
-            <div class="media-left">
-              <a href="#"><img class="media-object" src="" alt="playlist" /></a>
-            </div>
-            <div class="media-body">
-              <h4 class="media-heading">Media heading</h4>
-            </div>
-          </li>
-        </ul>
-      </div>
+    <button ng-click="loadPlaylist();">Load</button>
+    <button ng-click="authorize();">Authorize</button>
 
+    <div class="gridster">
+      <ul class="media-list" ng-repeat="track in playlist.tracks.items.track">
+        <li class="media" data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+          <div class="media-left">
+            <a href="#"><img class="media-object" src="" alt="track.name" /></a>
+          </div>
+          <div class="media-body">
+            <h4 class="media-heading">{{track.name}}</h4>
+          </div>
+        </li>
+      </ul>
     </div>
+
+  </div>
 
   <!-- JavaScript Library Stack -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
